<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_share_file">File Sharing</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">e-Devlet</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="barcode_close_dialog">Close</string>
    <string name="barcode_copy">Copy</string>
    <string name="barcode_result">Result</string>
    <string name="barcode_verify_common_error_message">Due to a technical problem, verification operation is not completed. Please try again later.</string>
    <string name="barcode_verify_main_title">You can verify barcoded documents created through the e-Government Gateway.</string>
    <string name="barcode_verify_or_title">or</string>
    <string name="barcode_verify_scan_error">Please scan a valid QR</string>
    <string name="barcode_verify_sub_title">"You can verify your document by reading the qr code on your document using your device's camera or by entering the information on your document."</string>
    <string name="barcode_verify_using_camera_title">Scan QR or Barcode</string>
    <string name="barcode_verify_using_doc_info">Verify with Document Information</string>
    <string name="barcode_verify_using_qr">Scan QR Code</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_manual_barcode">Next</string>
    <string name="button_manual_barcode_query">Verify</string>
    <string name="button_scan_identity_card">Start Scan</string>
    <string name="button_text_announcement">Announcements</string>
    <string name="button_text_close">Close</string>
    <string name="button_text_message">Messages</string>
    <string name="button_text_service">Show</string>
    <string name="button_text_settings">Settings</string>
    <string name="button_text_url">Show</string>
    <string name="button_verification_code_submit">Verify</string>
    <string name="button_verification_resend_code">Resend</string>
    <string name="cd_button_add_photo">Add Photo</string>
    <string name="cd_button_delete_history">Delete Search History</string>
    <string name="cd_button_delete_photo">Delete Photo</string>
    <string name="cd_button_flash_on">Turn On Flash</string>
    <string name="cd_menu_share">Share</string>
    <string name="cd_menu_share_document">Share The Document</string>
    <string name="cd_title_about">Info</string>
    <string name="cd_title_contact_information">Contact Information</string>
    <string name="cd_title_favorite">Favorite</string>
    <string name="cd_title_favorite_button">Favorite The Service</string>
    <string name="cd_title_home">Home</string>
    <string name="cd_title_logout">Logout</string>
    <string name="cd_title_mrz_scan">Camera</string>
    <string name="cd_title_pdf">e-Service Document</string>
    <string name="cd_title_personal_information">Identity and Address Information</string>
    <string name="cd_title_profile">My Profile</string>
    <string name="cd_title_profile_help">Help</string>
    <string name="cd_title_search">Search</string>
    <string name="cd_title_services">e-Services</string>
    <string name="cd_title_settings">Settings</string>
    <string name="cd_title_unfavorite_button">Unfavorite The Service</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">aa34f50700ed4b8bb7841386b940c421</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connection_error_button">TRY AGAIN</string>
    <string name="connection_error_info">There is an error in your internet connection.</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="dashboard_logout_dialog_no">Cancel</string>
    <string name="dashboard_logout_dialog_text">Are you sure that you want to logout?</string>
    <string name="dashboard_logout_dialog_yes">Logout</string>
    <string name="default_notification_channel">Tüm Bildirimler</string>
    <string name="default_web_client_id">798370494975-37jbdvifbrb98bc90cqt3mqv5b0i0m09.apps.googleusercontent.com</string>
    <string name="define_fastadapter">year;owner</string>
    <string name="dialog_negative_button_text_to_open_external_link">Cancel</string>
    <string name="dialog_no_activity_external_link">Connection is not valid</string>
    <string name="dialog_no_activity_external_link_close_button">Close</string>
    <string name="dialog_positive_button_text_to_open_external_link">Open</string>
    <string name="dialog_text_to_open_external_link">You will leave the e-Devlet application and will be redirected to another web page. Responsibility of the quality of service and content is under the relevant institution.</string>
    <string name="mkt_introduction_page_description_0">Use the Create New Report button to create a new accident report.</string>
    <string name="mkt_introduction_page_description_1">To be included in a created report, use the Include in New Report button.</string>
    <string name="mkt_introduction_page_involve_report_button">INCLUDE IN NEW REPORT</string>
    <string name="mkt_introduction_page_my_reports_button">MY REPORTS</string>
    <string name="mkt_introduction_page_my_reports_description">You can see the information about the reports you have created before, started to create in the last 3 hours or the reports you are involved in from the My Reports screen.</string>
    <string name="mkt_introduction_page_my_reports_title">MY REPORTS</string>
    <string name="mkt_introduction_page_new_report_button">CREATE NEW ACCIDENT REPORT</string>
    <string name="mkt_introduction_page_title">ACCIDENT REPORT</string>
    <string name="nfc_bottom_dialog_close">Close</string>
    <string name="nfc_settings_close">Please turn NFC on from settings of your device</string>
    <string name="nfc_settings_open">Open Settings</string>
    <string name="read_card_dialog_title_warning">Warning</string>
    <string name="title_about_page_fragment">e-Devlet Kapısı</string>
    <string name="title_barcode_fragment">Barcoded Documents</string>
    <string name="title_barcode_verify_fragment">Barcoded Document Verification</string>
    <string name="title_barcode_verify_fragment_manual">Verification with Document Information</string>
    <string name="title_concept_fragment">Integrated e-Services</string>
    <string name="title_contact_information">Contact Information</string>
    <string name="title_editor_fragment">Featured e-Services</string>
    <string name="title_electronic_doc_fragment">Document Verification e-Services</string>
    <string name="title_favorite_services_fragment">My Favorite e-Services</string>
    <string name="title_firm_category_list_fragment">Companies</string>
    <string name="title_home">Home</string>
    <string name="title_institution_city_list_fragment">Select City</string>
    <string name="title_institution_contact_fragment" />
    <string name="title_institution_detail_fragment" />
    <string name="title_most_used_fragment">Most Used e-Services</string>
    <string name="title_my_city_list_fragment">What Is In My City?</string>
    <string name="title_newest_fragment">Most Recent e-Services</string>
    <string name="title_personal_information">Identity and Address Information</string>
    <string name="title_profile">My Profile</string>
    <string name="title_search">Search</string>
    <string name="title_services">e-Services</string>
    <string name="title_settings">Settings</string>
    <string name="title_wonder_fragment">Most Asked Questions</string>
</resources>