<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceHeadline6" android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="end" android:id="@id/txt_main_explanation" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" android:text="@string/barcode_verify_main_title" android:lineSpacingExtra="2.0sp" android:fontFamily="@font/arimo_bold" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceSubtitle1" android:textSize="14.0sp" android:ellipsize="end" android:id="@id/txt_sub_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/barcode_verify_sub_title" android:fontFamily="@font/arimo" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_main_explanation" style="@style/Item_Subtitle_3" />
    <Button android:id="@id/btn_verify_document_info" android:padding="@dimen/spacing_major" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" android:text="@string/barcode_verify_using_doc_info" android:textAllCaps="true" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_sub_title" style="@style/Button_Document_Info" />
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceSubtitle1" android:ellipsize="end" android:gravity="center" android:id="@id/txt_or_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/barcode_verify_or_title" android:fontFamily="@font/arimo" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_verify_document_info" />
    <Button android:id="@id/btn_verify_qr" android:padding="@dimen/spacing_major" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" android:text="@string/barcode_verify_using_qr" android:textAllCaps="true" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_or_title" style="@style/buttonWhite" />
</androidx.constraintlayout.widget.ConstraintLayout>
