<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?textAppearanceHeadline6" android:textSize="16.0sp" android:id="@id/read_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:text="@string/read_card_dialog_title_warning" android:fontFamily="@font/arimo_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/animation_view" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" app:layout_constraintBottom_toTopOf="@id/read_dialog_message" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/read_dialog_title" app:lottie_autoPlay="true" app:lottie_loop="false" app:lottie_progress="@integer/lottie_border_lenght" app:lottie_rawRes="@raw/warning_yellow" />
    <TextView android:textAppearance="?textAppearanceBody2" android:textSize="14.0sp" android:gravity="center" android:id="@id/read_dialog_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" android:text="@string/nfc_settings_close" android:fontFamily="@font/arimo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/animation_view" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/read_dialog_message">
        <com.google.android.material.button.MaterialButton android:layout_gravity="center_vertical" android:id="@id/btn_close_settings_dialog" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_medium" android:layout_marginTop="@dimen/spacing_major" android:text="@string/nfc_bottom_dialog_close" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/guideline" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/buttonDialog" />
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="fill_parent" app:layout_constraintGuide_percent="0.5" />
        <com.google.android.material.button.MaterialButton android:layout_gravity="center_vertical" android:id="@id/btn_open_settings" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_medium" android:layout_marginTop="@dimen/spacing_major" android:text="@string/nfc_settings_open" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/guideline" app:layout_constraintTop_toTopOf="parent" style="@style/buttonDialog" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
