<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/mkt_introduction_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/mkt_introduction_parent_container" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@id/no_connection_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_minor" android:layout_marginStart="@dimen/spacing_minor" android:layout_marginEnd="@dimen/spacing_minor" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/include_no_connection" />
        <include android:id="@id/system_error_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_minor" android:layout_marginStart="@dimen/spacing_minor" android:layout_marginEnd="@dimen/spacing_minor" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/include_system_error" />
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/mkt_introduction_content_container" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceHeadline6" android:textSize="16.0sp" android:textStyle="bold" android:ellipsize="end" android:id="@id/txt_introduction_main_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" android:text="@string/mkt_introduction_page_title" android:lineSpacingExtra="2.0sp" android:fontFamily="@font/arimo_bold" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceSubtitle1" android:textSize="16.0sp" android:ellipsize="end" android:id="@id/txt_introduction_main_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_minor" android:text="@string/mkt_introduction_page_description_0" android:fontFamily="@font/arimo" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_introduction_main_title" style="@style/Item_Subtitle_3" />
            <com.google.android.material.button.MaterialButton android:id="@id/btn_mkt_start" android:padding="@dimen/spacing_major" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" android:text="@string/mkt_introduction_page_new_report_button" android:textAllCaps="true" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:icon="@drawable/mkt_intro_create_report" app:iconGravity="textStart" app:iconTint="@null" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_introduction_main_description" style="@style/buttonWhite" />
            <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceSubtitle1" android:textSize="16.0sp" android:ellipsize="end" android:id="@id/txt_introduction_main_description_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_minor" android:text="@string/mkt_introduction_page_description_1" android:fontFamily="@font/arimo" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_mkt_start" style="@style/Item_Subtitle_3" />
            <com.google.android.material.button.MaterialButton android:id="@id/btn_mkt_involve" android:padding="@dimen/spacing_major" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_major" android:text="@string/mkt_introduction_page_involve_report_button" android:textAllCaps="true" android:layout_marginStart="@dimen/spacing_major" android:layout_marginEnd="@dimen/spacing_major" app:icon="@drawable/mkt_intro_participate_report" app:iconGravity="textStart" app:iconTint="@null" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_introduction_main_description_1" style="@style/buttonWhite" />
            <com.google.android.material.card.MaterialCardView android:id="@id/introduction_card_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_major" app:cardElevation="@dimen/plane_04" app:cardUseCompatPadding="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_mkt_involve">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/spacing_medium">
                    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceHeadline6" android:textStyle="bold" android:ellipsize="end" android:id="@id/txt_introduction_item_2_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/mkt_introduction_page_my_reports_title" android:maxLines="2" android:lineSpacingExtra="2.0sp" android:fontFamily="@font/arimo_bold" android:layout_marginStart="@dimen/spacing_medium" android:layout_marginEnd="@dimen/spacing_medium" app:layout_constraintBottom_toTopOf="@id/txt_introduction_item_2_explanation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_goneMarginTop="@dimen/spacing_minor" />
                    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?textAppearanceSubtitle1" android:ellipsize="end" android:id="@id/txt_introduction_item_2_explanation" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xsmall" android:layout_marginBottom="@dimen/spacing_medium" android:text="@string/mkt_introduction_page_my_reports_description" android:fontFamily="@font/arimo" android:layout_marginStart="@dimen/spacing_medium" android:layout_marginEnd="@dimen/spacing_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_introduction_item_2_title" app:layout_goneMarginTop="@dimen/spacing_micro" style="@style/Item_Subtitle_1" />
                    <Button android:textStyle="bold" android:id="@id/btn_manual_next" android:padding="@dimen/spacing_minor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mkt_introduction_page_my_reports_button" android:textAllCaps="true" android:fontFamily="@font/arimo_bold" android:layout_marginEnd="@dimen/spacing_major" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_introduction_item_2_explanation" style="?borderlessButtonStyle" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
